--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# You can leave this empty for rinkeby or use "mainnet"
+# You can leave this empty for rsk_testnet or use "rsk" or "mainnet"
 REACT_APP_NETWORK=
 
 # For all environments
